[gd_scene load_steps=27 format=3 uid="uid://cp41dnrwavciv"]

[ext_resource type="Texture2D" uid="uid://ck0dl63ervbk" path="res://art/title-16.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dp5nu5b6pu5i1" path="res://art/menu/new-game.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bvb3ntf8s6flk" path="res://art/menu/options.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bhc0vkoxed3w4" path="res://art/menu/continue.png" id="4"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://berik77eqqgj0" path="res://art/options-16.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bcqrlq2kjobii" path="res://art/menu/main-menu.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bo25rnx2m88tn" path="res://art/menu/screensize.png" id="8"]
[ext_resource type="Texture2D" uid="uid://ngly5lel6xhs" path="res://art/menu/1280.png" id="9"]
[ext_resource type="Texture2D" uid="uid://d4hoi0g01wxqi" path="res://art/menu/apply.png" id="10"]
[ext_resource type="Texture2D" uid="uid://wlwkx7b1o2jx" path="res://art/menu/help.png" id="11"]
[ext_resource type="Texture2D" uid="uid://cb3ywb76ratsy" path="res://art/menu/credits.png" id="12"]
[ext_resource type="Texture2D" uid="uid://08mr6bnmahx6" path="res://art/menu/telemetry.png" id="13"]
[ext_resource type="Texture2D" uid="uid://cyiqbfewyr3jl" path="res://art/menu/telemetry-box.png" id="14"]
[ext_resource type="Texture2D" uid="uid://c83tcpy4o7nl" path="res://art/menu/hardcore.png" id="15"]
[ext_resource type="Texture2D" uid="uid://seltbs5j4nc2" path="res://art/menu/sound-box.png" id="16"]
[ext_resource type="Texture2D" uid="uid://cxbl7sw6srsm0" path="res://art/menu/hardcore-box.png" id="17"]
[ext_resource type="Texture2D" uid="uid://b63l22gud13yr" path="res://art/menu/sound.png" id="18"]
[ext_resource type="Texture2D" uid="uid://bm522vy5nd8xg" path="res://art/menu/checkmark.png" id="19"]
[ext_resource type="Texture2D" uid="uid://jfg3deehsfw8" path="res://art/menu/help-window.png" id="20"]
[ext_resource type="Texture2D" uid="uid://bhi83lnfk6rns" path="res://art/endings.png" id="21"]
[ext_resource type="Texture2D" uid="uid://cqwlwrtgwais" path="res://art/menu/endings.png" id="22"]
[ext_resource type="Texture2D" uid="uid://c2n6mrrdgu2wk" path="res://art/menu/endingback.png" id="23"]
[ext_resource type="Texture2D" uid="uid://cxjva7w0uic10" path="res://art/endingthumbs/unknown.png" id="24"]
[ext_resource type="Texture2D" uid="uid://bvnkftl2oilj4" path="res://art/menu/mousesize.png" id="25"]
[ext_resource type="Texture2D" uid="uid://cmhkhjj5xeduy" path="res://art/menu/default.png" id="26"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("5")

[node name="MainWindow" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="MainWindow"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="MainImage" type="TextureRect" parent="MainWindow"]
offset_top = 40.0
offset_right = 1280.0
offset_bottom = 680.0
texture = ExtResource("1")
stretch_mode = 6

[node name="NewGame" type="TextureRect" parent="MainWindow/MainImage"]
layout_mode = 0
offset_left = 80.0
offset_top = 162.0
offset_right = 257.0
offset_bottom = 209.0
texture = ExtResource("2")
stretch_mode = 3

[node name="Options" type="TextureRect" parent="MainWindow/MainImage"]
layout_mode = 0
offset_left = 78.0
offset_top = 206.0
offset_right = 255.0
offset_bottom = 253.0
texture = ExtResource("3")
stretch_mode = 3

[node name="Continue" type="TextureRect" parent="MainWindow/MainImage"]
visible = false
layout_mode = 0
offset_left = 79.0
offset_top = 106.0
offset_right = 250.0
offset_bottom = 150.0
texture = ExtResource("4")

[node name="Endings" type="TextureRect" parent="MainWindow/MainImage"]
visible = false
layout_mode = 0
offset_left = 70.0
offset_top = 247.0
offset_right = 270.0
offset_bottom = 307.0
texture = ExtResource("22")

[node name="OptionImage" type="TextureRect" parent="MainWindow"]
offset_left = 1280.0
offset_top = 40.0
offset_right = 2560.0
offset_bottom = 680.0
texture = ExtResource("6")

[node name="Back" type="TextureRect" parent="MainWindow/OptionImage"]
layout_mode = 0
offset_left = 31.0
offset_top = 442.0
offset_right = 243.0
offset_bottom = 524.0
texture = ExtResource("7")

[node name="Size" type="TextureRect" parent="MainWindow/OptionImage"]
layout_mode = 0
offset_left = 370.0
offset_top = 145.0
offset_right = 617.0
offset_bottom = 191.0
texture = ExtResource("8")

[node name="SizeSelection" type="TextureRect" parent="MainWindow/OptionImage/Size"]
layout_mode = 0
offset_left = 245.0
offset_top = -14.0
offset_right = 565.0
offset_bottom = 57.0
texture = ExtResource("9")
stretch_mode = 4

[node name="SizeApply" type="TextureRect" parent="MainWindow/OptionImage"]
layout_mode = 0
offset_left = 933.0
offset_top = 138.0
offset_right = 1070.0
offset_bottom = 222.0
texture = ExtResource("10")
stretch_mode = 4

[node name="Sound" type="TextureRect" parent="MainWindow/OptionImage"]
layout_mode = 0
offset_left = 474.0
offset_top = 198.0
offset_right = 613.0
offset_bottom = 247.0
texture = ExtResource("18")

[node name="SoundBox" type="TextureRect" parent="MainWindow/OptionImage/Sound"]
layout_mode = 0
offset_left = 271.0
offset_top = 10.0
offset_right = 311.0
offset_bottom = 50.0
texture = ExtResource("16")

[node name="Check" type="TextureRect" parent="MainWindow/OptionImage/Sound/SoundBox"]
layout_mode = 0
offset_left = -9.0
offset_top = -13.0
offset_right = 51.0
offset_bottom = 44.0
texture = ExtResource("19")

[node name="Hardcore" type="TextureRect" parent="MainWindow/OptionImage"]
visible = false
layout_mode = 0
offset_left = 416.0
offset_top = 310.0
offset_right = 615.0
offset_bottom = 368.0
texture = ExtResource("15")

[node name="HardcoreBox" type="TextureRect" parent="MainWindow/OptionImage/Hardcore"]
layout_mode = 0
offset_left = 331.0
offset_top = 13.0
offset_right = 371.0
offset_bottom = 53.0
texture = ExtResource("17")

[node name="Check" type="TextureRect" parent="MainWindow/OptionImage/Hardcore/HardcoreBox"]
layout_mode = 0
offset_left = -12.0
offset_top = -10.0
offset_right = 48.0
offset_bottom = 47.0
texture = ExtResource("19")

[node name="Telemetry" type="TextureRect" parent="MainWindow/OptionImage"]
layout_mode = 0
offset_left = 417.0
offset_top = 264.0
offset_right = 619.0
offset_bottom = 325.0
texture = ExtResource("13")

[node name="TelemetryBox" type="TextureRect" parent="MainWindow/OptionImage/Telemetry"]
layout_mode = 0
offset_left = 326.0
offset_top = 4.0
offset_right = 368.0
offset_bottom = 46.0
texture = ExtResource("14")

[node name="Check" type="TextureRect" parent="MainWindow/OptionImage/Telemetry/TelemetryBox"]
layout_mode = 0
offset_left = -10.0
offset_top = -8.0
offset_right = 50.0
offset_bottom = 49.0
texture = ExtResource("19")

[node name="Help" type="TextureRect" parent="MainWindow/OptionImage"]
layout_mode = 0
offset_left = 1149.0
offset_top = 425.0
offset_right = 1249.0
offset_bottom = 486.0
texture = ExtResource("11")

[node name="Credits" type="TextureRect" parent="MainWindow/OptionImage"]
layout_mode = 0
offset_left = 1074.0
offset_top = 501.0
offset_right = 1246.0
offset_bottom = 556.0
texture = ExtResource("12")

[node name="Mouse" type="TextureRect" parent="MainWindow/OptionImage"]
layout_mode = 0
offset_left = 391.0
offset_top = 332.0
offset_right = 638.0
offset_bottom = 378.0
texture = ExtResource("25")

[node name="MouseSelection" type="TextureRect" parent="MainWindow/OptionImage/Mouse"]
layout_mode = 0
offset_left = 254.0
offset_top = -15.0
offset_right = 513.0
offset_bottom = 56.0
texture = ExtResource("26")
stretch_mode = 4

[node name="HelpContainer" type="Container" parent="MainWindow/OptionImage"]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 640.0

[node name="HelpImage" type="TextureRect" parent="MainWindow/OptionImage/HelpContainer"]
layout_mode = 2
texture = ExtResource("20")

[node name="EndingImage" type="TextureRect" parent="MainWindow"]
offset_left = -1280.0
offset_top = 40.0
offset_bottom = 680.0
texture = ExtResource("21")

[node name="1" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 150.0
offset_top = 15.0
offset_right = 450.0
offset_bottom = 160.0
texture = ExtResource("24")

[node name="2" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 490.0
offset_top = 15.0
offset_right = 790.0
offset_bottom = 160.0
texture = ExtResource("24")

[node name="3" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 830.0
offset_top = 15.0
offset_right = 1130.0
offset_bottom = 160.0
texture = ExtResource("24")

[node name="4" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 150.0
offset_top = 170.0
offset_right = 450.0
offset_bottom = 315.0
texture = ExtResource("24")

[node name="5" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 490.0
offset_top = 170.0
offset_right = 790.0
offset_bottom = 315.0
texture = ExtResource("24")

[node name="6" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 830.0
offset_top = 170.0
offset_right = 1130.0
offset_bottom = 315.0
texture = ExtResource("24")

[node name="7" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 150.0
offset_top = 325.0
offset_right = 450.0
offset_bottom = 470.0
texture = ExtResource("24")

[node name="8" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 490.0
offset_top = 325.0
offset_right = 790.0
offset_bottom = 470.0
texture = ExtResource("24")

[node name="9" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 830.0
offset_top = 325.0
offset_right = 1130.0
offset_bottom = 470.0
texture = ExtResource("24")

[node name="10" type="TextureRect" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 490.0
offset_top = 480.0
offset_right = 790.0
offset_bottom = 625.0
texture = ExtResource("24")

[node name="Container" type="Container" parent="MainWindow/EndingImage"]
layout_mode = 0
offset_left = 994.0
offset_top = 521.0
offset_right = 1249.0
offset_bottom = 633.0

[node name="EndingBack" type="TextureRect" parent="MainWindow/EndingImage/Container"]
layout_mode = 2
texture = ExtResource("23")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="MainWindow/MainImage/NewGame" to="." method="_on_NewGame_gui_input"]
[connection signal="mouse_entered" from="MainWindow/MainImage/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/MainImage/NewGame" to="." method="_on_NewGame_mouse_exited"]
[connection signal="gui_input" from="MainWindow/MainImage/Options" to="." method="_on_Options_gui_input"]
[connection signal="mouse_entered" from="MainWindow/MainImage/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/MainImage/Options" to="." method="_on_Options_mouse_exited"]
[connection signal="gui_input" from="MainWindow/MainImage/Continue" to="." method="_on_Continue_gui_input"]
[connection signal="mouse_entered" from="MainWindow/MainImage/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/MainImage/Continue" to="." method="_on_Continue_mouse_exited"]
[connection signal="gui_input" from="MainWindow/MainImage/Endings" to="." method="_on_Endings_gui_input"]
[connection signal="mouse_entered" from="MainWindow/MainImage/Endings" to="." method="_on_Endings_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/MainImage/Endings" to="." method="_on_Endings_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/Back" to="." method="_on_Back_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/Back" to="." method="_on_Back_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/Back" to="." method="_on_Back_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/Size" to="." method="_on_Size_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/Size" to="." method="_on_Size_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/Size" to="." method="_on_Size_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/SizeApply" to="." method="_on_SizeApply_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/SizeApply" to="." method="_on_SizeApply_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/SizeApply" to="." method="_on_SizeApply_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/Sound" to="." method="_on_Sound_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/Sound" to="." method="_on_Sound_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/Sound" to="." method="_on_Sound_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/Hardcore" to="." method="_on_Hardcore_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/Hardcore" to="." method="_on_Hardcore_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/Hardcore" to="." method="_on_Hardcore_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/Telemetry" to="." method="_on_Telemetry_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/Telemetry" to="." method="_on_Telemetry_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/Telemetry" to="." method="_on_Telemetry_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/Help" to="." method="_on_Help_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/Help" to="." method="_on_Help_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/Help" to="." method="_on_Help_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/Credits" to="." method="_on_Credits_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/Credits" to="." method="_on_Credits_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/Credits" to="." method="_on_Credits_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/Mouse" to="." method="_on_Mouse_gui_input"]
[connection signal="mouse_entered" from="MainWindow/OptionImage/Mouse" to="." method="_on_Mouse_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/OptionImage/Mouse" to="." method="_on_Mouse_mouse_exited"]
[connection signal="gui_input" from="MainWindow/OptionImage/HelpContainer" to="." method="_on_HelpContainer_gui_input"]
[connection signal="gui_input" from="MainWindow/EndingImage/1" to="." method="_on_1_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/1" to="." method="_on_1_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/1" to="." method="_on_1_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/2" to="." method="_on_2_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/2" to="." method="_on_2_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/2" to="." method="_on_2_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/3" to="." method="_on_3_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/3" to="." method="_on_3_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/3" to="." method="_on_3_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/4" to="." method="_on_4_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/4" to="." method="_on_4_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/4" to="." method="_on_4_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/5" to="." method="_on_5_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/5" to="." method="_on_5_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/5" to="." method="_on_5_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/6" to="." method="_on_6_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/6" to="." method="_on_6_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/6" to="." method="_on_6_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/7" to="." method="_on_7_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/7" to="." method="_on_7_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/7" to="." method="_on_7_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/8" to="." method="_on_8_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/8" to="." method="_on_8_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/8" to="." method="_on_8_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/9" to="." method="_on_9_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/9" to="." method="_on_9_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/9" to="." method="_on_9_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/10" to="." method="_on_10_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/10" to="." method="_on_10_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/10" to="." method="_on_10_mouse_exited"]
[connection signal="gui_input" from="MainWindow/EndingImage/Container/EndingBack" to="." method="_on_EndingBack_gui_input"]
[connection signal="mouse_entered" from="MainWindow/EndingImage/Container/EndingBack" to="." method="_on_EndingBack_mouse_entered"]
[connection signal="mouse_exited" from="MainWindow/EndingImage/Container/EndingBack" to="." method="_on_EndingBack_mouse_exited"]
